@@ -109,6 +109,7 @@ public:
 		MSG_CROP_CIRCLE_COMPLETE,
 		MSG_CITY_ATTACK_COMPLETE,
 		MSG_UFO_CRASHED,
+		MSG_BATTLESHIP_DESTROYED,
 
 #ifndef IMMEDIATE_BUY
 		MSG_CARGO_ARRIVED,
